--- a/strapi-backend/package.json
+++ b/strapi-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-strapi",
+  "name": "strapi-backend",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,10 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.24.0",
-    "@strapi/plugin-users-permissions": "4.24.0",
-    "@strapi/plugin-i18n": "4.24.0",
-    "@strapi/plugin-cloud": "4.24.0",
+    "@strapi/strapi": "4.24.1",
+    "@strapi/plugin-users-permissions": "4.24.1",
+    "@strapi/plugin-i18n": "4.24.1",
+    "@strapi/plugin-cloud": "4.24.1",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -25,7 +25,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "25116604-c010-4308-b691-9f5ce35e946e"
+    "uuid": "7a34e7cc-81ba-4845-a085-9f45fac35c3f"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
