--- a/Ecommerce/package.json
+++ b/Ecommerce/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.6",
     "axios": "^1.6.8",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
